[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Objects/Camera2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Objects/Visuals/Transition.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Resources/Themes/MainTheme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Sprites/UI/Results.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Background/menuback.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Results.gd" type="Script" id=6]

[node name="Results" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -320.0
margin_bottom = -180.0
script = ExtResource( 6 )

[node name="Back" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -164.0
margin_top = -73.0
margin_right = 164.0
margin_bottom = 73.0
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Values" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 4.0
margin_top = -30.0
margin_right = -4.0
margin_bottom = 30.0

[node name="ScoreBox" type="HBoxContainer" parent="Values"]
margin_right = 312.0
margin_bottom = 12.0
alignment = 1

[node name="CurrentScore" type="Label" parent="Values/ScoreBox"]
margin_left = 68.0
margin_right = 179.0
margin_bottom = 12.0
theme = ExtResource( 3 )
text = "Current Score:"

[node name="ScoreTally" type="Label" parent="Values/ScoreBox"]
margin_left = 183.0
margin_right = 244.0
margin_bottom = 12.0
theme = ExtResource( 3 )
text = "000000"
align = 2

[node name="DamageBox" type="HBoxContainer" parent="Values"]
margin_top = 16.0
margin_right = 312.0
margin_bottom = 28.0
alignment = 1

[node name="CurrentDamage" type="Label" parent="Values/DamageBox"]
margin_left = 56.0
margin_right = 190.0
margin_bottom = 12.0
theme = ExtResource( 3 )
text = "No-Damage Bonus:"

[node name="DamageTally" type="Label" parent="Values/DamageBox"]
margin_left = 194.0
margin_right = 255.0
margin_bottom = 12.0
theme = ExtResource( 3 )
text = "000000"
align = 2

[node name="DeathBox" type="HBoxContainer" parent="Values"]
margin_top = 32.0
margin_right = 312.0
margin_bottom = 44.0
alignment = 1

[node name="CurrentDeath" type="Label" parent="Values/DeathBox"]
margin_left = 61.0
margin_right = 185.0
margin_bottom = 12.0
theme = ExtResource( 3 )
text = "No-Death Bonus:"

[node name="DeathTally" type="Label" parent="Values/DeathBox"]
margin_left = 189.0
margin_right = 250.0
margin_bottom = 12.0
theme = ExtResource( 3 )
text = "000000"
align = 2

[node name="TotalBox" type="HBoxContainer" parent="Values"]
margin_top = 48.0
margin_right = 312.0
margin_bottom = 60.0
alignment = 1

[node name="TotalScore" type="Label" parent="Values/TotalBox"]
margin_left = 78.0
margin_right = 168.0
margin_bottom = 12.0
theme = ExtResource( 3 )
text = "Total Score:"

[node name="TotalTally" type="Label" parent="Values/TotalBox"]
margin_left = 172.0
margin_right = 233.0
margin_bottom = 12.0
theme = ExtResource( 3 )
text = "000000"
align = 2

[node name="Continue" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.86
anchor_right = 0.5
anchor_bottom = 0.86
margin_left = -39.5
margin_top = -18.0
margin_right = 39.5
mouse_filter = 2
theme = ExtResource( 3 )
text = "Continue"
flat = true

[node name="Results" type="Sprite" parent="."]
position = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false

[node name="Camera2D" parent="." instance=ExtResource( 1 )]

[node name="Transition" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="Continue" to="." method="continuePressed"]
